[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/sections/json_section/JsonSection.gd" type="Script" id=1]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/bool_checkbox/BoolVariableCheckbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_array_directories.tres" type="Resource" id=3]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_json_export_path.tres" type="Resource" id=4]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/sections/json_section/StringVariableColum.gd" type="Script" id=5]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/path_line_edit/FilePathLineEdit.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_array_filters.tres" type="Resource" id=7]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/bool_is_recursive_scan.tres" type="Resource" id=8]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/path_line_edit/DirectoryPathLineEdit.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/icons/icon_add.svg" type="Texture" id=10]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/string_line_edit/StringVariableLineEdit.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/editor_button_theme.tres" type="Theme" id=12]

[node name="JsonSection" type="VBoxContainer"]
margin_right = 1018.0
margin_bottom = 216.0
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "directories", "filters", "is_recursive", "save_path" ), [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ) ] ]

[node name="SectionTitle" type="Label" parent="."]
margin_right = 1018.0
margin_bottom = 14.0
text = "JSON Reference Parameters"

[node name="SectionTitleBG" type="ColorRect" parent="SectionTitle"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 1, 0.121569 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DirectoriesRow" type="HBoxContainer" parent="."]
margin_top = 22.0
margin_right = 1018.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="DirectoriesRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Directories to scan"
valign = 1

[node name="DirectoriesColum" type="VBoxContainer" parent="DirectoriesRow"]
margin_left = 511.0
margin_right = 1018.0
margin_bottom = 83.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="DirectoriesRow/DirectoriesColum"]
resources = [ PoolStringArray( "editor_field" ), [ ExtResource( 9 ) ] ]

[node name="Fields" type="VBoxContainer" parent="DirectoriesRow/DirectoriesColum"]
margin_right = 507.0
margin_bottom = 48.0

[node name="AddMore" type="Button" parent="DirectoriesRow/DirectoriesColum"]
margin_left = 405.0
margin_top = 52.0
margin_right = 507.0
margin_bottom = 83.0
size_flags_horizontal = 8
theme = ExtResource( 12 )
custom_constants/hseparation = 10
text = "Add folder"
icon = ExtResource( 10 )

[node name="FiltersRow" type="HBoxContainer" parent="."]
margin_top = 113.0
margin_right = 1018.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="FiltersRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Patterns to filter files"
valign = 1

[node name="FilterColumn" type="VBoxContainer" parent="FiltersRow"]
margin_left = 511.0
margin_right = 1018.0
margin_bottom = 57.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="FiltersRow/FilterColumn"]
resources = [ PoolStringArray( "editor_field" ), [ ExtResource( 11 ) ] ]

[node name="Fields" type="VBoxContainer" parent="FiltersRow/FilterColumn"]
margin_right = 507.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMore" type="Button" parent="FiltersRow/FilterColumn"]
margin_left = 412.0
margin_top = 26.0
margin_right = 507.0
margin_bottom = 57.0
size_flags_horizontal = 8
theme = ExtResource( 12 )
custom_constants/hseparation = 10
text = "Add filter"
icon = ExtResource( 10 )

[node name="RecursiveRow" type="HBoxContainer" parent="."]
margin_top = 178.0
margin_right = 1018.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="RecursiveRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Should scan directories recursively"
valign = 1

[node name="IsRecursive" parent="RecursiveRow" instance=ExtResource( 2 )]
text = "On"
_bool_variable = ExtResource( 8 )

[node name="JsonReferenceRow" type="HBoxContainer" parent="."]
margin_top = 210.0
margin_right = 1018.0
margin_bottom = 232.0

[node name="Label" type="Label" parent="JsonReferenceRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
text = "Json reference export file path"
valign = 1

[node name="JsonPathSelector" parent="JsonReferenceRow" instance=ExtResource( 6 )]
file_dialog_filter = "*.json"

[node name="ExportJson" type="Button" parent="."]
margin_left = 768.0
margin_top = 240.0
margin_right = 1018.0
margin_bottom = 269.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 8
theme = ExtResource( 12 )
text = "Generate Json Reference"
[connection signal="pressed" from="DirectoriesRow/DirectoriesColum/AddMore" to="DirectoriesRow/DirectoriesColum" method="_on_AddMore_pressed"]
[connection signal="text_changed" from="FiltersRow/FilterColumn/Fields/StringVariableLineEdit" to="FiltersRow/FilterColumn/Fields/StringVariableLineEdit" method="_on_StringVariableLineEdit_text_changed"]
[connection signal="text_entered" from="FiltersRow/FilterColumn/Fields/StringVariableLineEdit" to="FiltersRow/FilterColumn/Fields/StringVariableLineEdit" method="_on_StringVariableLineEdit_text_entered"]
[connection signal="pressed" from="FiltersRow/FilterColumn/AddMore" to="FiltersRow/FilterColumn" method="_on_AddMore_pressed"]
[connection signal="pressed" from="ExportJson" to="." method="_on_ExportJson_pressed"]
